# prax

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE-APACHE  README.md  TODO.md  deny.toml  docker-compose.yml  prax.toml
prax-axum/: Cargo.toml
prax-axum/src/: lib.rs
prax-cassandra/: Cargo.toml  README.md
prax-cassandra/src/: auth.rs  config.rs  connection.rs  engine.rs  error.rs  lib.rs  pool.rs  row.rs  row_ref.rs  types.rs  udf.rs  virtual_tables.rs
prax-cassandra/tests/: capability_compile_fail.rs  cassandra_integration.rs
prax-cassandra/tests/ui/: cql_no_relation_filter.rs  cql_no_relation_filter.stderr
prax-cli/: Cargo.toml
prax-cli/src/: cli.rs  config.rs  error.rs  lib.rs  main.rs  schema_loader.rs
prax-cli/src/commands/: db.rs  format.rs  generate.rs  import.rs  init.rs  introspect.rs  migrate.rs  mod.rs  seed.rs  validate.rs
prax-cli/tests/: cli_tests.rs
prax-codegen/: Cargo.toml
prax-codegen/src/: lib.rs  schema_reader.rs
prax-codegen/src/generators/: aggregate.rs  count_struct.rs  derive.rs  derive_client.rs  derive_from_row.rs  derive_model_trait.rs  derive_model_with_pk.rs  derive_relation_loader.rs  fields.rs  filters.rs  mod.rs  model.rs  relation_accessors.rs  view.rs
prax-codegen/src/macros/: accessor.rs  mod.rs  schema_resolve.rs  shape_accessor.rs  validate.rs
prax-codegen/tests/: derive_inputs.rs  ui.rs
prax-codegen/tests/fixtures/: inputs_schema.rs  schema.prax
prax-codegen/tests/ui/: aggregate_no_blocks_fail.rs  aggregate_no_blocks_fail.stderr  aggregate_sum_distinct_fail.rs  aggregate_sum_distinct_fail.stderr  aggregate_sum_on_string_fail.rs  aggregate_sum_on_string_fail.stderr  aggregate_unknown_column_fail.rs  aggregate_unknown_column_fail.stderr  aggregate_unknown_key_fail.rs  aggregate_unknown_key_fail.stderr  aggregate_value_not_true_fail.rs  aggregate_value_not_true_fail.stderr  count_distinct_bad_value_fail.rs  count_distinct_bad_value_fail.stderr  count_distinct_on_all_fail.rs  count_distinct_on_all_fail.stderr  count_select_value_not_true_fail.rs  count_select_value_not_true_fail.stderr  group_by_empty_by_fail.rs  group_by_empty_by_fail.stderr  group_by_missing_by_fail.rs  group_by_missing_by_fail.stderr  group_by_order_by_bare_col_not_in_by_fail.rs  group_by_order_by_bare_col_not_in_by_fail.stderr  group_by_order_by_deferred_fail.rs  group_by_order_by_deferred_fail.stderr  group_by_order_by_unmatched_agg_fail.rs  group_by_unknown_by_column_fail.rs  (+2 more)
prax-duckdb/: Cargo.toml
prax-duckdb/benches/: duckdb_operations.rs
prax-duckdb/src/: capabilities.rs  config.rs  connection.rs  engine.rs  error.rs  lib.rs  pool.rs  row.rs  row_ref.rs  types.rs
prax-duckdb/tests/: capabilities.rs  e2e.rs
prax-import/: BENCHMARKS.md  Cargo.toml  README.md
prax-import/benches/: import_benchmarks.rs
prax-import/src/: converter.rs  error.rs  lib.rs
prax-migrate/: Cargo.toml  README.md
prax-migrate/examples/: cql_migration.rs  duckdb_migration.rs  event_sourcing.rs
prax-migrate/src/: bootstrap.rs  dialect.rs  diff.rs  engine.rs  error.rs  event.rs  event_store.rs  file.rs  history.rs  lib.rs  procedure.rs  sql.rs  state.rs
prax-migrate/tests/: cql_migration.rs  duckdb_migration.rs  event_sourcing_workflow.rs  generated_columns.rs
prax-mongodb/: Cargo.toml
prax-mongodb/src/: capabilities.rs  engine.rs  error.rs  lib.rs  row_ref.rs  types.rs  view.rs
prax-mongodb/tests/: capabilities.rs  e2e.rs
prax-mssql/: Cargo.toml
prax-mssql/src/: capabilities.rs  connection.rs  engine.rs  lib.rs  pool.rs  row.rs  row_ref.rs  types.rs
prax-mssql/tests/: capabilities.rs  e2e.rs
prax-mysql/: Cargo.toml
prax-mysql/src/: capabilities.rs  engine.rs  lib.rs  raw.rs  row_ref.rs
prax-mysql/tests/: capabilities.rs  e2e.rs  row_ref.rs
prax-pgvector/: Cargo.toml
prax-pgvector/src/: error.rs  filter.rs  index.rs  lib.rs  ops.rs  query.rs  types.rs
prax-pgvector/tests/: pgvector_integration.rs
prax-postgres/: Cargo.toml
prax-postgres/src/: capabilities.rs  connection.rs  deserialize.rs  engine.rs  lib.rs  pool.rs  row_ref.rs  statement.rs  types.rs
prax-postgres/tests/: aggregate_macros.rs  capabilities.rs  computed_fields.rs  e2e.rs  engine_crud.rs  row_ref.rs  uuid_binding.rs
prax-query/: Cargo.toml
prax-query/benches/: advanced_features_bench.rs  aggregation_bench.rs  async_bench.rs  database_bench.rs  mem_optimize_bench.rs  memory_profile_bench.rs  operations_bench.rs  pagination_bench.rs  tenant_bench.rs  throughput_bench.rs
prax-query/src/: advanced.rs  builder.rs  cache.rs  capabilities.rs  cte.rs  db_optimize.rs  dialect.rs  error.rs  extension.rs  filter.rs  introspection.rs  json.rs  lib.rs  memory.rs  nested.rs  partition.rs  pool.rs  procedure.rs  projection.rs  query.rs  raw.rs  replication.rs  row.rs  search.rs  security.rs  sequence.rs  sql.rs  traits.rs  trigger.rs  upsert.rs  window.rs  zero_copy.rs
prax-query/tests/: capability_gates.rs  inputs_args.rs  inputs_relation.rs  inputs_scalar.rs  inputs_update.rs  operation_ext_methods.rs  projection.rs
prax-schema/: Cargo.toml
prax-schema/benches/: ast_operations.rs  schema_parsing.rs  validation_bench.rs
prax-schema/src/: error.rs  lib.rs  validator.rs
prax-schema/tests/: computed_field_attributes.rs  computed_field_parser.rs  computed_field_validation.rs
prax-scylladb/: Cargo.toml
prax-scylladb/benches/: scylladb_operations.rs
prax-scylladb/src/: config.rs  connection.rs  engine.rs  error.rs  lib.rs  pool.rs  row.rs  row_ref.rs  types.rs
prax-scylladb/tests/: capability_compile_fail.rs  e2e.rs
prax-sqlite/: Cargo.toml  README.md
prax-sqlite/benches/: sqlite_operations.rs
prax-sqlite/examples/: vector_rag.rs
prax-sqlite/src/: capabilities.rs  connection.rs  engine.rs  error.rs  lib.rs  pool.rs  raw.rs  row_ref.rs
prax-sqlite/tests/: capabilities.rs  e2e.rs  engine_crud.rs  row_ref.rs  vector_integration.rs
prax-sqlx/: Cargo.toml
prax-sqlx/src/: engine.rs  lib.rs  row_ref.rs
prax-typegen/: Cargo.toml
prax-typegen/src/: error.rs  lib.rs  main.rs  mapping.rs  typescript.rs  zod.rs
(+292 files in other folders)
