[package]
name = "prax-axum"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Axum framework integration for Prax ORM"
keywords = ["orm", "database", "axum", "tower", "web"]
categories = ["database", "web-programming"]

[dependencies]
prax-query = { workspace = true }
prax-postgres = { workspace = true, optional = true }
prax-mysql = { workspace = true, optional = true }
prax-sqlite = { workspace = true, optional = true }

# Axum
axum = "0.8"
tower = "0.5"
tower-layer = "0.3"
tower-service = "0.3"
http = "1.1"

# Async
tokio = { workspace = true }
async-trait = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Utilities
tracing = { workspace = true }

[features]
default = ["postgres"]
postgres = ["prax-postgres"]
mysql = ["prax-mysql"]
sqlite = ["prax-sqlite"]

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

