[package]
name = "prax-orm-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "CLI tool for the Prax ORM"
documentation = "https://docs.rs/prax-cli"
keywords = ["orm", "cli", "database", "migrations", "code-generation"]
categories = ["command-line-utilities", "database"]

[lib]
name = "prax_cli"
path = "src/lib.rs"

[[bin]]
name = "prax"
path = "src/main.rs"

[dependencies]
# CLI framework
clap = { version = "4.5", features = ["derive", "env", "color"] }

# Async runtime
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "fs"] }

# Error handling
miette = { workspace = true, features = ["fancy"] }
thiserror = { workspace = true }

# Output formatting
owo-colors = "4.1"

# Configuration
toml = "1.1"
serde = { workspace = true }
serde_json = { workspace = true }

# Date/time for migrations
chrono = { workspace = true }

# Regex for parsing
regex-lite = { workspace = true }

# URL parsing
url = "2.5"

# UUID generation for seeding
uuid = { workspace = true, features = ["v4"] }

# Internal crates
prax-schema = { workspace = true }
prax-codegen = { workspace = true }
prax-migrate = { workspace = true }
prax-query = { workspace = true }
prax-import = { workspace = true }

# Database drivers for introspection
tokio-postgres = { workspace = true, optional = true }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = { workspace = true }

[features]
default = ["postgres", "seaorm"]
postgres = ["tokio-postgres"]
mysql = []
sqlite = []
mssql = []
seaorm = ["prax-import/seaorm"]