[package]
name = "prax-import"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Import schemas from Prisma, Diesel, and SeaORM to Prax ORM"
documentation = "https://docs.rs/prax-import"
keywords = ["orm", "prisma", "diesel", "seaorm", "migration"]
categories = ["database", "development-tools"]

[dependencies]
# Internal crates
prax-schema.workspace = true

# Parsing
pest.workspace = true
pest_derive.workspace = true
syn.workspace = true
proc-macro2.workspace = true
quote.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true
toml.workspace = true

# Error handling
thiserror.workspace = true
miette.workspace = true

# Utilities
indexmap.workspace = true
regex-lite.workspace = true
convert_case.workspace = true
smol_str.workspace = true
once_cell = "1.20"

[dev-dependencies]
insta.workspace = true
pretty_assertions.workspace = true
tempfile.workspace = true
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "import_benchmarks"
harness = false

[features]
default = ["prisma", "diesel", "seaorm"]
prisma = []
diesel = []
seaorm = []
