[package]
name = "prax-query"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Type-safe query builder for the Prax ORM"
documentation = "https://docs.rs/prax-query"
keywords = ["orm", "query-builder", "database", "sql", "async"]
categories = ["database", "asynchronous"]

[lib]
# Disable the default libtest bench target so `cargo bench` doesn't try
# to run `src/lib.rs` unittests through libtest — they can't understand
# criterion flags like `--save-baseline` and crash the Benchmark
# Regression Check CI job.
bench = false

[dependencies]
# Async runtime
tokio = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Utilities
indexmap = { workspace = true }
smol_str = { workspace = true }
smallvec = { workspace = true }
bumpalo = { workspace = true }
uuid = { workspace = true }
url = { workspace = true }
owo-colors = "4.1"
parking_lot = { workspace = true }
num_cpus = "1.16"

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true, optional = true }

# Profiling (optional)
dhat = { workspace = true, optional = true }
memory-stats = { workspace = true, optional = true }

# MongoDB support
bson = { workspace = true, optional = true }

[dev-dependencies]
dhat = { workspace = true }
memory-stats = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
pretty_assertions = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "operations_bench"
harness = false

[[bench]]
name = "aggregation_bench"
harness = false

[[bench]]
name = "pagination_bench"
harness = false

[[bench]]
name = "advanced_features_bench"
harness = false

[[bench]]
name = "tenant_bench"
harness = false

[[bench]]
name = "async_bench"
harness = false

[[bench]]
name = "mem_optimize_bench"
harness = false

[[bench]]
name = "database_bench"
harness = false

[[bench]]
name = "throughput_bench"
harness = false

[[bench]]
name = "memory_profile_bench"
harness = false

[features]
default = []
tracing-subscriber = ["dep:tracing-subscriber"]
thread-local-tenant = []
mongodb = ["dep:bson"]
profiling = ["dep:dhat", "dep:memory-stats"]
dhat-heap = ["dep:dhat"]

